--- a/osg-release/README
+++ b/osg-release/README
@@ -5,6 +5,18 @@ This release includes:
  - Development
  - Minefield (Directly off koji)
  - Pre-Release (Directly off koji)
+ - Upcoming
+ - Upcoming Testing
+ - Upcoming Development
+ - Upcoming Minefield (Directly off koji)
+ - Upcoming Pre-Release (Directly off koji)
+ - Contrib
+ - Devops
+ - Devops ITB
+ - Next (Future release series, possibly not yet existing)
+ - Next Testing
+ - Next Development
+ - Next Minefield (Directly off koji)
 
 The osg-release is designed for both el5 and el6.  It only installs the
 appropriate repo files for the platform.
